small corrections to the script after having made to tests